--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "lint": "standard --fix",
+    "start": "node server.js",
+    "dev": "nodemon --watch src src/server.js"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +17,7 @@
     "mongoose": "^8.5.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.4",
+    "standard": "^17.1.0"
   }
 }
